update-manager (1:0.123) UNRELEASEDkarmic; urgency=low

  * debian/control:
    - build auto-upgrade-tester package
  * UpdateManager/Core/MyCache.py:
    - wording fix (thanks to Ng)
  * DistUpgrade/DistUpgradeViewNonInteractive.py:
    - fix bug in dpkg_progress_log filea
  * AutoUpgradeTester/UpgradeTestBackend.py:
    - import the http_proxy from the environment

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 19 Jun 2009 17:31:36 +0200

update-manager (1:0.122) karmic; urgency=low

  * DistUpgrade/DistUpgradeQuirks.py:
    - add handler to check for wl module and transition
      to bcmwl-kernel-source (LP: #381684)
  * DistUpgrade/DistUpgradeViewNonInteractive.py:
    - add bool option "NonInteractive/DpkgProgressLog" to write
      a timing log of the upgrade (for the foundations-karmic-pre-unpacking
      spec)
    - add "NonInteractive/DebugBrokenScripts" option that will re-run
      failed maintainer scripts with debug options
  * DistUpgrade/DistUpgrade.cfg:
    - add defaults for the NonInteractive section that match the 
      interactive upgrades (for better landscape support)
    - enable apport again
  * AutoUpgradeTester/chart_dpkg_progress.py:
    - add simple tool that can read the dpkg progress information

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 18 Jun 2009 16:54:35 +0200

update-manager (1:0.121) karmic; urgency=low

  * DistUpgrade/DistUpgrade.cfg:
    - remove obsolete kubuntu-kde4-desktop meta package
  * DistUpgrade/DistUpgradeCache.py:
    - when guessing missing meta-packages stop after
      the first one was found
    - use internal _lookupPkgRecord() instead of 
      pkg._lookupRecord
  * DistUpgrade/DistUpgradeQuirks.py:
    - move the kubuntu-kde4-desktop key dependency transition
      detection to the from_hardy quirks handler (LP: #368459)
  * UpdateManager/Core/MyCache.py:
    - always disable version number range of the changes in the
      details (LP: #251349)